# boilerplate

./: Dockerfile  README.md  pyproject.toml  zappa_settings.json
.circleci/: config.yml
app/: __init__.py
