[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = ""
authors = ["Robin Tully <mr.robintully@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
zappa = "^0.48.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12.13"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
deploy-dev = "zappa deploy dev"
update-dev = "zappa update dev"